--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<html>
-    <body>
-        <p>
-        hello abhi!
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello this is Abhi Trambadia</h1>
+    <p>Given below is my Work.</p>
+    <button><a href="./portfolio.html">Portfolio</a></button><br>
+    <hr color="black">
+    <button><a href="./index1.html">index1</a></button><br>
+    
+</body>
 </html>
