--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button><a href="./portfolio.html">Portfolio</a></button><br>
     <hr color="black">
     <button><a href="./index1.html">index1</a></button><br>
+    <hr color="black">
+    <button><a href="./navbar1.html">index1</a></button><br>
     
 </body>
 </html>
