--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr color="black">
     <button><a href="./index1.html">index1</a></button><br>
     <hr color="black">
-    <button><a href="./navbar1.html">index1</a></button><br>
+    <button><a href="./navbar1.html">Navigation bar</a></button><br>
     
 </body>
 </html>
