--- a/js1.html
+++ b/js1.html
@@ -2,11 +2,29 @@
 <html>
 <body>
 
-<h2>Hello , Its Abhi</h2>
+<h1><b>Hello , Its Abhi</b></h1>
 
-<p id="demo">JavaScript 1st program.</p>
 
-<button type="button" onclick="document.getElementById('demo').style.fontSize='35px'">Click Me!</button>
+
+<div id="abhi"><h1>
+ My name is Abhi.</h1>
+</div>
+
+<script>
+function myFunction()
+{
+  var x = document.getElementById("abhi");
+  if (x.style.display === "none") 
+    {
+    x.style.display = "block";
+    } 
+    else 
+    {
+    x.style.display = "none";
+    }
+}
+</script>
+<button style="color: blue;" onclick="myFunction()">Click Me !</button>
 
 </body>
 </html> 
