--- a/js1.html
+++ b/js1.html
@@ -13,18 +13,25 @@
 <script>
 function myFunction()
 {
+    let btn = document.getElementById("meet");
+
   var x = document.getElementById("abhi");
   if (x.style.display === "none") 
     {
     x.style.display = "block";
+    btn.textContent = "hide Me";
     } 
     else 
     {
     x.style.display = "none";
+    btn.textContent = "show me";
     }
 }
 </script>
-<button style="color: blue;" onclick="myFunction()">Click Me !</button>
+<button style="color: blue;" id="meet" onclick="myFunction()">hide me</button>
 
 </body>
 </html> 
+
+
+
